[tool.poetry]
name = "botnet"
version = "0.1.0"
description = ""
authors = ["rTiRe <zientenin@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.0"
asyncpg = "^0.30.0"
uvicorn = "^0.32.0"
starlette-context = "^0.3.6"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
aiocryptopay = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
